Spacing between article heading and bottom spacing has been fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8036,6 +8036,12 @@ hr {
 .no-margin {
   margin: 0; }
 
+.no-margin-bottom {
+  margin-bottom: 0; }
+
+.no-margin-top {
+  margin-top: 0; }
+
 .no-margin-right {
   margin-right: 0; }
 
