--- a/resources/assets/sass/customeFrame.scss
+++ b/resources/assets/sass/customeFrame.scss
@@ -110,6 +110,14 @@ hr{
   margin: 0;
 }
 
+.no-margin-bottom{
+  margin-bottom: 0;
+}
+
+.no-margin-top{
+  margin-top: 0;
+}
+
 .no-margin-right{
   margin-right: 0;
 }
